@@ -1,27 +1,37 @@
 package com.mrtasks.controller;
 
-import com.mrtasks.model.Client;
+import com.mrtasks.config.RateLimitConfig;
 import com.mrtasks.model.Task;
 import com.mrtasks.model.Task.TaskStatus;
 import com.mrtasks.model.User;
+import com.mrtasks.model.dto.ClientDto;
+import com.mrtasks.model.dto.mapper.DtoMapper;
+import com.mrtasks.model.dto.PageDto;
+import com.mrtasks.model.dto.TaskDto;
 import com.mrtasks.repository.ClientRepository;
 import com.mrtasks.repository.TaskRepository;
 import com.mrtasks.repository.UserRepository;
 import com.mrtasks.service.TaskService;
+import io.github.bucket4j.Bucket;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.ResponseBody;
 
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Controller
+@RequestMapping
 @RequiredArgsConstructor
 public class TasksController {
 
@@ -29,6 +39,8 @@ public class TasksController {
     private final UserRepository userRepository;
     private final ClientRepository clientRepository;
     private final TaskRepository taskRepository;
+    private final RateLimitConfig rateLimitConfig;
+    private final DtoMapper dtoMapper;
 
     @GetMapping("/tasks")
     public String listAllTasks(
@@ -39,9 +51,27 @@ public class TasksController {
             @RequestParam(required = false) String status,
             Model model,
             Authentication auth) {
+        // Rate limiting
+        Bucket bucket = rateLimitConfig.getTaskSearchBucket(auth.getName());
+        if (!bucket.tryConsume(1)) {
+            User user = userRepository.findByUsername(auth.getName()).orElseThrow();
+            model.addAttribute("error", "error.rate.limit.task.search");
+            model.addAttribute("tasks", List.of());
+            model.addAttribute("clients", clientRepository.findByUser(user).stream()
+                    .map(dtoMapper::toClientDto)
+                    .collect(Collectors.toList()));
+            model.addAttribute("currentPage", 0);
+            model.addAttribute("totalPages", 0);
+            model.addAttribute("pageSize", size);
+            model.addAttribute("search", search);
+            model.addAttribute("clientId", clientId);
+            model.addAttribute("status", status);
+            return "tasks";
+        }
+
         User user = userRepository.findByUsername(auth.getName()).orElseThrow();
         Pageable pageable = PageRequest.of(page, size);
-        Page<Task> taskPage;
+
 
         // Convert String status to TaskStatus enum if provided
         TaskStatus taskStatus = null;
@@ -49,47 +79,96 @@ public class TasksController {
             try {
                 taskStatus = TaskStatus.valueOf(status.trim());
             } catch (IllegalArgumentException e) {
-                // Handle invalid status gracefully, e.g., ignore or default to null
                 taskStatus = null;
             }
         }
 
-        if (search != null && !search.trim().isEmpty()) {
-            if (clientId != null && taskStatus != null) {
-                taskPage = taskRepository.findByUserAndTitleContainingIgnoreCaseAndClientIdAndStatus(
-                        user, search, clientId, taskStatus, pageable);
-            } else if (clientId != null) {
-                taskPage = taskRepository.findByUserAndTitleContainingIgnoreCaseAndClientId(
-                        user, search, clientId, pageable);
-            } else if (taskStatus != null) {
-                taskPage = taskRepository.findByUserAndTitleContainingIgnoreCaseAndStatus(
-                        user, search, taskStatus, pageable);
-            } else {
-                taskPage = taskRepository.findByUserAndTitleContainingIgnoreCase(user, search, pageable);
-            }
-        } else {
-            if (clientId != null && taskStatus != null) {
-                taskPage = taskRepository.findByUserAndClientIdAndStatus(user, clientId, taskStatus, pageable);
-            } else if (clientId != null) {
-                taskPage = taskRepository.findByUserAndClientId(user, clientId, pageable);
-            } else if (taskStatus != null) {
-                taskPage = taskRepository.findByUserAndStatus(user, taskStatus, pageable);
-            } else {
-                taskPage = taskRepository.findByUser(user, pageable);
-            }
-        }
-
-        List<Client> clients = clientRepository.findByUser(user);
-        model.addAttribute("tasks", taskPage.getContent().stream()
+        Page<Task> taskPage = queryTasks(user, search, clientId, taskStatus, pageable);
+        List<TaskDto> taskDtos = taskPage.getContent().stream()
                 .sorted(Comparator.comparingInt(Task::getOrderIndex))
-                .toList());
-        model.addAttribute("clients", clients);
+                .map(dtoMapper::toTaskDto)
+                .collect(Collectors.toList());
+        List<ClientDto> clientDtos = clientRepository.findByUser(user).stream()
+                .map(dtoMapper::toClientDto)
+                .collect(Collectors.toList());
+
+        model.addAttribute("tasks", taskDtos);
+        model.addAttribute("clients", clientDtos);
         model.addAttribute("currentPage", taskPage.getNumber());
         model.addAttribute("totalPages", taskPage.getTotalPages());
         model.addAttribute("pageSize", size);
         model.addAttribute("search", search);
         model.addAttribute("clientId", clientId);
-        model.addAttribute("status", status); // Keep original String value for the form
+        model.addAttribute("status", status);
         return "tasks";
+    }
+
+    @GetMapping("/tasks/search")
+    @ResponseBody
+    public ResponseEntity<?> searchTasks(
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "10") int size,
+            @RequestParam(required = false) String search,
+            @RequestParam(required = false) Long clientId,
+            @RequestParam(required = false) String status,
+            Authentication auth) {
+        // Rate limiting
+        Bucket bucket = rateLimitConfig.getTaskSearchBucket(auth.getName());
+        if (!bucket.tryConsume(1)) {
+            return ResponseEntity.status(429).body("error.rate.limit.task.search");
+        }
+        User user = userRepository.findByUsername(auth.getName()).orElseThrow();
+        Pageable pageable = PageRequest.of(page, size);
+
+
+        // Convert String status to TaskStatus enum if provided
+        TaskStatus taskStatus = null;
+        if (status != null && !status.trim().isEmpty()) {
+            try {
+                taskStatus = TaskStatus.valueOf(status.trim());
+            } catch (IllegalArgumentException e) {
+                taskStatus = null;
+            }
+        }
+
+        Page<Task> taskPage = queryTasks(user, search, clientId, taskStatus, pageable);
+        PageDto<TaskDto> pageDto = new PageDto<>();
+        pageDto.setContent(taskPage.getContent().stream()
+                .sorted(Comparator.comparingInt(Task::getOrderIndex))
+                .map(dtoMapper::toTaskDto)
+                .collect(Collectors.toList()));
+        pageDto.setPageNumber(taskPage.getNumber());
+        pageDto.setPageSize(taskPage.getSize());
+        pageDto.setTotalPages(taskPage.getTotalPages());
+        pageDto.setTotalElements(taskPage.getTotalElements());
+
+        return ResponseEntity.ok(pageDto);
+    }
+
+    private Page<Task> queryTasks(User user, String search, Long clientId, TaskStatus taskStatus, Pageable pageable) {
+        if (search != null && !search.trim().isEmpty()) {
+            if (clientId != null && taskStatus != null) {
+                return taskRepository.findByUserAndTitleContainingIgnoreCaseAndClientIdAndStatus(
+                        user, search, clientId, taskStatus, pageable);
+            } else if (clientId != null) {
+                return taskRepository.findByUserAndTitleContainingIgnoreCaseAndClientId(
+                        user, search, clientId, pageable);
+            } else if (taskStatus != null) {
+                return taskRepository.findByUserAndTitleContainingIgnoreCaseAndStatus(
+                        user, search, taskStatus, pageable);
+            } else {
+                return taskRepository.findByUserAndTitleContainingIgnoreCase(user, search, pageable);
+            }
+        } else {
+            if (clientId != null && taskStatus != null) {
+                return taskRepository.findByUserAndClientIdAndStatus(user, clientId, taskStatus, pageable);
+            } else if (clientId != null) {
+                return taskRepository.findByUserAndClientId(user, clientId, pageable);
+            } else if (taskStatus != null) {
+                return taskRepository.findByUserAndStatus(user, taskStatus, pageable);
+            } else {
+                return taskRepository.findByUser(user, pageable);
+            }
+        }
     }
 }
